Remove obsolete references to Java 8.
Signed-off-by: Kai Hudalla <kai.hudalla@bosch-si.com>