@@ -14,22 +14,9 @@ Hono's service components are implemented in Java. When the corresponding Docker
 
 This is a reasonable approach when running on *bare metal* or a VM where other processes are expected to be running on the same machine, thus competing for the same computing resources. However, containers are usually configured to run a single process only so that it makes more sense to dedicate almost all of the available resources to running that process, leaving the (small) rest for the operating system itself.
 
-As described above, a Docker container can easily be configured with a limit for memory and CPU resources that it may use during runtime. These limits are set and enforced using Linux *CGroups*. When a Java VM is run inside of such a Docker container which has been configured with a memory limit, then the result of the JVM's attempt to determine the available resources during startup will not reflect the memory limit imposed on the container. That is because the JVM by default does not consider the CGroup limit but instead queries the operating system for the overall amount of memory available. The same is true for the way that the JVM determines the number of available CPU cores.
+As described above, a Docker container can easily be configured with a limit for memory and CPU resources that it may use during runtime. These limits are set and enforced using Linux *CGroups*.
 
-As described above, a Docker container can easily be configured with a limit for memory and CPU resources that it may use during runtime. These limits are set and enforced using Linux *CGroups*. When a pre version 9 Java VM is run inside of such a Docker container which has been configured with a memory limit, then the result of the JVM's attempt to determine the available resources during startup will not reflect the memory limit imposed on the container. That is because the JVM by default does not consider the CGroup limit but instead queries the operating system for the overall amount of memory available. The same is true for the way that the JVM determines the number of available CPU cores. Starting with version 9 Java correctly determines the amount of memory and CPUs available when running in a container.
-
-## Limiting a Container's Memory Consumption
-
-### Java 8
-
-OpenJDK 8 has introduced the experimental `-XX:+UseCGroupMemoryLimitForHeap` option to make the JVM consider CGroup limits when determining the amount of available memory. Using this option, it is possible to explicitly configure a Java 8 VM's memory consumption within the boundaries of the container's (limited) resources. However, the JVM will still only allocate a quarter of the (limited) amount of memory, thus leaving a lot of the memory available to the container unused.
-
-Either of the following JVM options can be used in Java 8 in order to change this behavior:
-
-* `-XX:MaxRAMFraction` can be used to set the fraction of total memory that may be allocated for the heap. The default value is 4 (meaning that up to a quarter of the memory will be allocated), so in order to increase the amount of memory, the value can be set to 2 (using up to 50% of the memory) or 1 (using up to 100% of the memory). Setting the option to 1 is strongly discouraged because it would leave no memory left for the JVM's other memory areas nor any additional processes run by the operating system.
-* `-Xmx` can be used to explicitly set the maximum amount of memory used for the heap. As a rule of thumb, setting this value to 60-70% of the container's (limited) amount of memory should usually work. Based on the application's memory usage characteristics, increasing the value to 80 or even 90% might also work.
- 
-### Java 9 and later
+## Limiting a Component's Memory Consumption
 
 Starting with Java 9, the JVM will correctly determine the total memory and number of CPUs available when running inside of a container. All of the Docker images provided by Hono run with OpenJDK 11 by default, thus ensuring that the JVM considers any memory limits configured for the container when configuring its heap during startup. However, the default algorithm will still only allocate a quarter of the (limited) amount of memory, thus leaving a lot of memory available to the container unused.
 
@@ -88,6 +75,6 @@ The `resources` property defines the overall limit of 256 MB of memory that the 
 
 Hono supports limiting the overall number of simultaneously connected devices per tenant. Please refer to the [connections limit concept]({{< relref "/concepts/resource-limits.md#connections-limit" >}}) for more information. The limit needs to be configured at the tenant level using the *resource-limits* configuration property. Please refer to the [Tenant API]({{< ref "/api/tenant#tenant-information-format" >}}) for configuration details.
 
-## Limiting the Number of Messages
+## Limiting the Data Volume
 
-Hono supports limiting the number of messages that devices of a tenant can publish to Hono during a given time interval. Please refer to the [messages limit concept] ({{< relref "/concepts/resource-limits.md#messages-limit" >}}) for more information. The limit needs to be configured at the tenant level using the *resource-limits* configuration property. Please refer to the [Tenant API]({{< ref "/api/tenant#tenant-information-format" >}}) for configuration details.
+Hono supports limiting the amount of data that devices of a tenant can publish to Hono during a given time interval. Please refer to the [messages limit concept] ({{< relref "/concepts/resource-limits.md#messages-limit" >}}) for more information. The limit needs to be configured at the tenant level using the *resource-limits* configuration property. Please refer to the [Tenant API]({{< ref "/api/tenant#tenant-information-format" >}}) for configuration details.
